# solana-harpoon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  WORKFLOW.md  instruction.md  setup.sh  todo.md
crates/harpoon-car/: Cargo.toml
crates/harpoon-car/src/: lib.rs  mmap.rs  node.rs
crates/harpoon-cli/: Cargo.toml
crates/harpoon-cli/src/: download.rs  main.rs  pipeline.rs  stats.rs
crates/harpoon-cli/src/cmd/: decode.rs  ingest.rs  inspect.rs  mod.rs
crates/harpoon-decode/: Cargo.toml
crates/harpoon-decode/src/: borsh.rs  idl.rs  lib.rs
crates/harpoon-export/: Cargo.toml
crates/harpoon-export/src/: lib.rs  reader.rs  record.rs  schema.rs  writer.rs
crates/harpoon-solana/: Cargo.toml
crates/harpoon-solana/src/: decode.rs  extract.rs  filter.rs  lib.rs
idls/: 6EF8rrecthR5Dkzon8Nwu78hRvfCKubJ14M5uBEwF6P.json
legacy/: start.sh
legacy/decoder/: decode.mjs  decode_worker.mjs  package-lock.json  package.json
legacy/scripts/: 00_prepare_epochs.py  01_flatten_pump_ix.py  02_decode_fast.py  cheat_list.md  export_bot_data.py  pumpfun_quant_research_blueprint.md  run_pipeline.py
legacy/solana-harpoon/: README.md
legacy/solana_parser/: doc.md
legacy/solana_parser/old-faithful-rpc/: Cargo.toml  build.rs
legacy/solana_parser/old-faithful-rpc/proto/: old-faithful.proto
legacy/solana_parser/old-faithful-rpc/src/: main.rs
