[package]
name = "yellowstone-faithful-car-parser"
version = "1.0.0"
authors = ["Triton One", "Lamports Dev"]
edition = "2024"
description = "CAR parser for Yellowstone Old Faithful project"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/yellowstone-faithful-car-parser"
license = "AGPL-3.0-only"
keywords = ["solana"]

[[bin]]
name = "counter"
required-features = ["counter"]

[dependencies]
anyhow = { version = "1.0.62" }
bincode = { version = "1.3.3" }
bytes = "1.10.1"
base64 = { version = "0.22.1", optional = true }
cid = "0.11.1"
clap = { version = "4.5.40", features = ["derive"] }
const-hex = "1.14.1"
crc = "3.3.0"
fnv = "1.0.7"
indexmap = "2.10.0"
indicatif = { version = "0.18.0" }
multihash = "0.19.3"
prost = { version = "0.11.9" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_cbor = "0.11.2"
solana-sdk = { version = "~2.2.2" }
solana-storage-proto = { version = "~2.2.19" }
solana-transaction-status = { version = "~2.2.19" }
thiserror = "2.0.11"
tokio = { version = "1.46.1", features = ["full"] }
zstd = { version = "0.13.3" }
rayon = { version = "1.10.0" }
memchr = "2.7"
aho-corasick = "1.1"
arrow = "53.0"
arrow-array = "53.0"
arrow-schema = "53.0"
parquet = "53.0"
bs58 = "0.5"

[dev-dependencies]
const-hex = "1.14.1"

[features]
default = []
counter = [
    "tokio/fs",
    "tokio/macros",
    "tokio/rt-multi-thread"
]
timing = []

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[patch.crates-io]
chrono = { version = "=0.4.31" }

[profile.release]
lto = true
codegen-units = 1
