[workspace]
resolver = "3"
members = ["crates/harpoon-car", "crates/harpoon-solana", "crates/harpoon-decode"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/lamports-dev/solana-harpoon"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
