[package]
name = "harpoon-car"
version = "0.1.0"
description = "CAR format parser for Old Faithful Solana archives"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.10.1"
cid = "0.11.1"
crc = "3.3.0"
fnv = "1.0.7"
indexmap = "2.10.0"
memmap2 = "0.9"
multihash = "0.19.3"
serde_cbor = "0.11.2"
thiserror = "2.0.11"
tokio = { version = "1.46.1", features = ["io-util"] }

[dev-dependencies]
const-hex = "1.14.1"
tokio = { version = "1.46.1", features = ["io-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
