[package]
name = "harpoon-decode"
version = "0.1.0"
description = "Generic Anchor IDL decoder — borsh to JSON, no Node.js"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bs58 = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
thiserror = "2.0.11"

[dev-dependencies]
const-hex = "1.14.1"

[lints]
workspace = true
