[package]
name = "old-faithful-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"
prost = "0.12"
solana-sdk = "1.18" # Актуальная версия SDK Соланы
solana-transaction-status = "1.18"
bincode = "1.3.3"
parquet = "58.0.0"
bs58 = "0.5.1"

[build-dependencies]
tonic-build = "0.10"
